--- a/index.html
+++ b/index.html
@@ -96,4 +96,128 @@
         flex-grow: 1;
         padding: 12px;
         border: 1px solid #555;
-        border-radius:
+        border-radius: 8px;
+        background-color: #555; /* Dark input background */
+        color: #e0e0e0;
+        font-size: 1em;
+      }
+
+      #chatInput::placeholder {
+        color: #bbb;
+      }
+
+      #sendBtn {
+        padding: 12px 20px;
+        background-color: #28a745; /* Green send button */
+        color: white;
+        border: none;
+        border-radius: 8px;
+        cursor: pointer;
+        font-size: 1em;
+        transition: background-color 0.2s ease;
+      }
+
+      #sendBtn:hover {
+        background-color: #218838;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="container">
+      <h1>Simple Chat Bot</h1>
+
+      <div class="chat-area">
+        <div id="messages">
+          <div class="message system">
+            Hello! I am a simple chat bot. Type a message to start!
+          </div>
+        </div>
+        <div class="input-area">
+          <input type="text" id="chatInput" placeholder="Ask me anything..." />
+          <button id="sendBtn">Send</button>
+        </div>
+      </div>
+    </div>
+
+    <script>
+      /* --- JavaScript Section --- */
+      const messagesDiv = document.getElementById("messages");
+      const chatInput = document.getElementById("chatInput");
+      const sendBtn = document.getElementById("sendBtn");
+
+      // A simple list of keywords and basic responses
+      const responses = {
+        hello: "Hello there!",
+        hi: "Hi to you too!",
+        "how are you": "I'm just a program, but I'm functioning perfectly!",
+        name: "I don't have a name, but you can call me ChatBot.",
+        weather: "I'm afraid I don't have access to real-time weather data.",
+        joke: "Why don't scientists trust atoms? Because they make up everything!",
+        default: "That's an interesting thought! Could you tell me more?",
+      };
+
+      // Sensitive words list for safety filter
+      const sensitiveWords = [
+        "bomb",
+        "attack",
+        "kill",
+        "harm",
+        "weapon",
+        "destroy",
+        "explode",
+        "danger",
+        "violence",
+        "illegal",
+      ];
+
+      function displayMessage(text, sender) {
+        const messageElement = document.createElement("div");
+        messageElement.classList.add("message", sender);
+        messageElement.textContent = text;
+        messagesDiv.appendChild(messageElement);
+        messagesDiv.scrollTop = messagesDiv.scrollHeight; // Scroll to bottom
+      }
+
+      function generateBotResponse(userInput) {
+        const lowerInput = userInput.toLowerCase();
+
+        // 1. Safety Filter (highest priority)
+        for (const word of sensitiveWords) {
+          if (lowerInput.includes(word)) {
+            return "I cannot discuss topics that involve harm, danger, or illegal activities. Please choose a different subject.";
+          }
+        }
+
+        // 2. Keyword-based responses
+        for (const keyword in responses) {
+          if (lowerInput.includes(keyword)) {
+            return responses[keyword];
+          }
+        }
+
+        // 3. Default response if no keyword matches
+        return responses.default;
+      }
+
+      function handleSendMessage() {
+        const userInput = chatInput.value.trim();
+        if (userInput === "") return;
+
+        displayMessage(userInput, "user");
+        chatInput.value = ""; // Clear input
+
+        // Get bot response
+        const botResponse = generateBotResponse(userInput);
+        displayMessage(botResponse, "ai");
+      }
+
+      // Event listeners
+      sendBtn.addEventListener("click", handleSendMessage);
+      chatInput.addEventListener("keypress", (event) => {
+        if (event.key === "Enter") {
+          handleSendMessage();
+        }
+      });
+    </script>
+  </body>
+</html>
